# ShadowSight

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
shadowsight/: conf_sample.py  config.py  monitoring.py  publish.py  shadow.py  utils.py
